--- a/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/CustomerSupportAccountsPage.form
+++ b/MedicalServicesCentralisationSystem/src/userInterface/SystemAdminWorkArea/CustomerSupportAccountsPage.form
@@ -24,8 +24,8 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="706" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" pref="832" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   </Group>
